<resources>
    <string name="app_name">DnD Char Manager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string name="loading">Loading…</string>
    <string name="signed_out">Signed Out</string>

    <string name="character_name">Character name</string>
    <string name="character_class">Class</string>
    <string name="race">Race</string>
    <string name="new_character">New Character</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="duplicate">Duplicate</string>
    <string name="delete">Delete</string>
    <string name="title_activity_character">Character</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_abilities">Abilities</string>
    <string name="title_skills">Skills</string>

    <string name="ask_delete_character">Are you sure you want to delete this Character?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="experience">Experience (XP)</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="level_number">Level %d</string>
    <string name="weapons">Weapons</string>
    <string name="items">Items</string>
    <string name="score">Score</string>
    <string name="temporary_score">Temp Score</string>
    <string name="rank">Rank</string>
    <string name="misc_modifier">Misc. Modif.</string>
    <string name="hit_points">Hit Points (HP)</string>
    <string name="hp_current_status">"%1$d / %2$d"</string>
    <string name="armor">Armor</string>
    <string name="money">Money</string>
    <string name="item_name">Item name</string>
    <string name="weight">Weight</string>
    <string name="is_magical">Is magical</string>
    <string name="description">Description</string>
    <string name="item_description">Item description</string>
    <string name="ask_delete_item">Are you sure you want to delete this item?</string>
    <string name="signin_intro_text">Sign in to access the app and manage your characters</string>
    <string name="signin_title">Welcome!</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_url">http://dgtalize.com/dndcharmanager/privacy</string>
    <string name="damage">Damage</string>
    <string name="weapon_name">Weapon name</string>
    <string name="type">Type</string>
    <string name="critical">Critical</string>
    <string name="ask_remove_weapon">Are you sure you want to remove this weapon?</string>
    <string name="equip">Equip</string>
    <string name="edit">Edit</string>
    <string name="is_ranged">Is ranged (not melee)</string>
    <string name="armor_name">Armor name</string>
    <string name="armor_bonus">Armor bonus</string>
    <string name="max_dex_bonus">Max DEX bonus</string>
    <string name="ask_remove_armor">Are you sure you want to remove this armor?</string>
    <string name="ask_remove_feat">Are you sure you want to remove this feat?</string>
    <string name="short_description">Short description</string>
    <string name="feat_name">Feat name</string>
    <string name="home">Home</string>
    <string name="feats">Feats</string>
    <string name="spells">Spells</string>
    <string name="skills">Skills</string>
    <string name="abilities">Abilities</string>
    <string name="select_feat">Select Feat</string>
    <string name="select_armor">Select Armor</string>
    <string name="select_weapon">Select Weapon</string>
    <string name="logout">Logout</string>
    <string name="characters">Characters</string>
    <string name="races">Races</string>
    <string name="classes">Classes</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="version">Version</string>
    <string name="build_date">Build date</string>
    <string name="created_by_dgtalize">Created by DGtalize</string>
    <string name="about">About</string>
    <string name="armor_class">Armor Class (AC)</string>
    <string name="refreshing">Refreshing...</string>
    <string name="saving_throws">Saving throws</string>
    <string name="fortitude">Fortitude</string>
    <string name="reflex">Reflex</string>
    <string name="will">Will</string>
    <string name="points">Points</string>
    <string name="heal">Heal</string>
    <string name="bab">Base Attack Bonus (BAB)</string>
    <string name="error_loading_character">There was an error loading the Character.</string>
    <string name="character_modified">Not saved</string>
    <string name="character_modified_not_saved">The Character has been modified but not saved.</string>
    <string name="prompt_character_exit_no_save">The Character has been modified but not saved. If you continue all changes will be lost. Are you sure you want to continue?</string>
    <string name="rename">Rename</string>
    <string name="games">Games</string>
    <string name="character_quantity">Characters</string>
    <string name="game_name">Game name</string>
    <string name="new_game">New Game</string>
    <string name="game_modified_not_saved">Game has been modified</string>
    <string name="prompt_game_exit_no_save">The Game has been modified but not saved. Are you sure you want to exit?</string>
    <string name="function_not_implemented">Function not implemented yet.</string>
    <string name="ask_remove_character_from_game">Are you sure you want to remove this Character from the Game?</string>
    <string name="remove">Remove</string>
    <string name="invite_emails_hint">Enter the emails of the players you want to invite to the game</string>
    <string name="send">Send</string>
    <string name="invites_sent">Invites sent</string>
    <string name="ask_logout">Are you sure you want to log out?</string>
    <string name="title_activity_game">Game</string>
    <string name="invite_player">Invite Player</string>
    <string name="game_invitation">Game invitation</string>
    <string name="unknown">Unknown</string>
    <string name="game_chat_message">Game chat message</string>
    <string name="invites">Invites</string>
    <string name="select_character_game">Select a Character for the Game</string>
    <string name="invitation_game_accepted">Invitation for \'%1$s\' was accepted.</string>
    <string name="generic_problem_message">There was a problem: %1$s</string>
    <string name="game_invite_message">Come join the \'%1$s\'!</string>
    <string name="character_removed">The character \'%1$s\' has been removed</string>
    <string name="in_game">In game</string>
    <string name="xp_cannot_be_negative">XP cannot be less than 0.</string>
    <string name="profile">Profile</string>
    <string name="alignment">Alignment</string>
    <string name="character_removed_from_game">\'%1$s\' was removed from the \'%2$s\' game.</string>
    <string name="remove_from_game">Leave game</string>
    <string name="validation_field_cannot_empty">This field cannot be empty.</string>
    <string name="grapple">Grapple</string>
    <string name="search">Search</string>
    <string name="search_hint">Search...</string>
</resources>
