<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_characters"
            android:icon="@drawable/ic_person_body"
            android:title="@string/characters" />
        <item
            android:id="@+id/nav_games"
            android:icon="@drawable/ic_group"
            android:title="@string/games" />
        <item
            android:id="@+id/nav_invites"
            android:icon="@drawable/ic_mail"
            android:title="@string/invites" />
        <item
            android:id="@+id/nav_races"
            android:icon="@drawable/ic_list"
            android:title="@string/races" />
        <item
            android:id="@+id/nav_classes"
            android:icon="@drawable/ic_list"
            android:title="@string/classes" />
        <item
            android:id="@+id/nav_skills"
            android:icon="@drawable/ic_list"
            android:title="@string/skills" />
    </group>


    <group
        android:id="@+id/nav_group_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/logout" />
    </group>

</menu>
