<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dgtalize.dndcharmanager.ui.WeaponAddActivity">

    <EditText
        android:id="@+id/nameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/weapon_name"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="weapon name" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/damage"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBaseline_toBaselineOf="@+id/damageSmallTextEdit"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="S"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBaseline_toBaselineOf="@+id/damageSmallTextEdit"
        app:layout_constraintLeft_toRightOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="M"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBaseline_toBaselineOf="@+id/damageMediumTextEdit"
        app:layout_constraintLeft_toRightOf="@+id/damageSmallTextEdit" />

    <AutoCompleteTextView
        android:id="@+id/damageSmallTextEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:completionThreshold="1"
        android:ems="4"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/nameText"
        tools:text="1d2" />

    <AutoCompleteTextView
        android:id="@+id/damageMediumTextEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:completionThreshold="1"
        android:ems="4"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/nameText"
        tools:text="1d3" />

    <TextView
        android:id="@+id/weightLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/weight"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBaseline_toBaselineOf="@+id/weightText"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/weightText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/weightLabelTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/criticalEditText"
        tools:text="123" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/critical"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBaseline_toBaselineOf="@+id/criticalEditText"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/type"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner"
        android:layout_marginTop="0dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/rangedCheckBox"
        app:layout_constraintHorizontal_bias="0.0" />

    <AutoCompleteTextView
        android:id="@+id/criticalEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:completionThreshold="1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/damageSmallTextEdit"
        tools:text="x2" />

    <CheckBox
        android:id="@+id/rangedCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/is_ranged"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightText" />


</android.support.constraint.ConstraintLayout>
